// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`An Octaves Test Suite should map - chromatic 1`] = `
Array [
  Object {
    "C-2": 0,
  },
  Object {
    "C#-2": 1,
  },
  Object {
    "D-2": 2,
  },
  Object {
    "D#-2": 3,
  },
  Object {
    "E-2": 4,
  },
  Object {
    "F-2": 5,
  },
  Object {
    "F#-2": 6,
  },
  Object {
    "G-2": 7,
  },
  Object {
    "G#-2": 8,
  },
  Object {
    "A-2": 9,
  },
  Object {
    "A#-2": 10,
  },
  Object {
    "B-2": 11,
  },
  Object {
    "C-1": 12,
  },
  Object {
    "C#-1": 13,
  },
  Object {
    "D-1": 14,
  },
  Object {
    "D#-1": 15,
  },
  Object {
    "E-1": 16,
  },
  Object {
    "F-1": 17,
  },
  Object {
    "F#-1": 18,
  },
  Object {
    "G-1": 19,
  },
  Object {
    "G#-1": 20,
  },
  Object {
    "A-1": 21,
  },
  Object {
    "A#-1": 22,
  },
  Object {
    "B-1": 23,
  },
  Object {
    "C0": 24,
  },
  Object {
    "C#0": 25,
  },
  Object {
    "D0": 26,
  },
  Object {
    "D#0": 27,
  },
  Object {
    "E0": 28,
  },
  Object {
    "F0": 29,
  },
  Object {
    "F#0": 30,
  },
  Object {
    "G0": 31,
  },
  Object {
    "G#0": 32,
  },
  Object {
    "A0": 33,
  },
  Object {
    "A#0": 34,
  },
  Object {
    "B0": 35,
  },
  Object {
    "C1": 36,
  },
  Object {
    "C#1": 37,
  },
  Object {
    "D1": 38,
  },
  Object {
    "D#1": 39,
  },
  Object {
    "E1": 40,
  },
  Object {
    "F1": 41,
  },
  Object {
    "F#1": 42,
  },
  Object {
    "G1": 43,
  },
  Object {
    "G#1": 44,
  },
  Object {
    "A1": 45,
  },
  Object {
    "A#1": 46,
  },
  Object {
    "B1": 47,
  },
  Object {
    "C2": 48,
  },
  Object {
    "C#2": 49,
  },
  Object {
    "D2": 50,
  },
  Object {
    "D#2": 51,
  },
  Object {
    "E2": 52,
  },
  Object {
    "F2": 53,
  },
  Object {
    "F#2": 54,
  },
  Object {
    "G2": 55,
  },
  Object {
    "G#2": 56,
  },
  Object {
    "A2": 57,
  },
  Object {
    "A#2": 58,
  },
  Object {
    "B2": 59,
  },
  Object {
    "C3": 60,
  },
  Object {
    "C#3": 61,
  },
  Object {
    "D3": 62,
  },
  Object {
    "D#3": 63,
  },
  Object {
    "E3": 64,
  },
  Object {
    "F3": 65,
  },
  Object {
    "F#3": 66,
  },
  Object {
    "G3": 67,
  },
  Object {
    "G#3": 68,
  },
  Object {
    "A3": 69,
  },
  Object {
    "A#3": 70,
  },
  Object {
    "B3": 71,
  },
  Object {
    "C4": 72,
  },
  Object {
    "C#4": 73,
  },
  Object {
    "D4": 74,
  },
  Object {
    "D#4": 75,
  },
  Object {
    "E4": 76,
  },
  Object {
    "F4": 77,
  },
  Object {
    "F#4": 78,
  },
  Object {
    "G4": 79,
  },
  Object {
    "G#4": 80,
  },
  Object {
    "A4": 81,
  },
  Object {
    "A#4": 82,
  },
  Object {
    "B4": 83,
  },
  Object {
    "C5": 84,
  },
  Object {
    "C#5": 85,
  },
  Object {
    "D5": 86,
  },
  Object {
    "D#5": 87,
  },
  Object {
    "E5": 88,
  },
  Object {
    "F5": 89,
  },
  Object {
    "F#5": 90,
  },
  Object {
    "G5": 91,
  },
  Object {
    "G#5": 92,
  },
  Object {
    "A5": 93,
  },
  Object {
    "A#5": 94,
  },
  Object {
    "B5": 95,
  },
  Object {
    "C6": 96,
  },
  Object {
    "C#6": 97,
  },
  Object {
    "D6": 98,
  },
  Object {
    "D#6": 99,
  },
  Object {
    "E6": 100,
  },
  Object {
    "F6": 101,
  },
  Object {
    "F#6": 102,
  },
  Object {
    "G6": 103,
  },
  Object {
    "G#6": 104,
  },
  Object {
    "A6": 105,
  },
  Object {
    "A#6": 106,
  },
  Object {
    "B6": 107,
  },
  Object {
    "C7": 108,
  },
  Object {
    "C#7": 109,
  },
  Object {
    "D7": 110,
  },
  Object {
    "D#7": 111,
  },
  Object {
    "E7": 112,
  },
  Object {
    "F7": 113,
  },
  Object {
    "F#7": 114,
  },
  Object {
    "G7": 115,
  },
  Object {
    "G#7": 116,
  },
  Object {
    "A7": 117,
  },
  Object {
    "A#7": 118,
  },
  Object {
    "B7": 119,
  },
  Object {
    "C8": 120,
  },
  Object {
    "C#8": 121,
  },
  Object {
    "D8": 122,
  },
  Object {
    "D#8": 123,
  },
  Object {
    "E8": 124,
  },
  Object {
    "F8": 125,
  },
  Object {
    "F#8": 126,
  },
  Object {
    "G8": 127,
  },
]
`;

exports[`An Octaves Test Suite should map - flat 1`] = `
Array [
  Note {
    "_accident": "b",
    "_enharmonic": "G#",
    "_freq": 830.6093951598903,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 80,
    "_next": "A",
    "_note": "Ab",
    "_octave": 4,
    "_prev": "G",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 932.3275230361799,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 82,
    "_next": "B",
    "_note": "Bb",
    "_octave": 4,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1046.5022612023945,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 84,
    "_next": "C#",
    "_note": "C",
    "_octave": 5,
    "_prev": "B",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "C#",
    "_freq": 1108.7305239074883,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 85,
    "_next": "D",
    "_note": "Db",
    "_octave": 5,
    "_prev": "C",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 1244.5079348883237,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 87,
    "_next": "E",
    "_note": "Eb",
    "_octave": 5,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1396.9129257320155,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 89,
    "_next": "F#",
    "_note": "F",
    "_octave": 5,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1567.981743926997,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 91,
    "_next": "G#",
    "_note": "G",
    "_octave": 5,
    "_prev": "F#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "G#",
    "_freq": 1661.2187903197805,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 92,
    "_next": "A",
    "_note": "Ab",
    "_octave": 5,
    "_prev": "G",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 1864.6550460723597,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 94,
    "_next": "B",
    "_note": "Bb",
    "_octave": 5,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2093.004522404789,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 96,
    "_next": "C#",
    "_note": "C",
    "_octave": 6,
    "_prev": "B",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "C#",
    "_freq": 2217.4610478149766,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 97,
    "_next": "D",
    "_note": "Db",
    "_octave": 6,
    "_prev": "C",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 2489.0158697766474,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 99,
    "_next": "E",
    "_note": "Eb",
    "_octave": 6,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2793.825851464031,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 101,
    "_next": "F#",
    "_note": "F",
    "_octave": 6,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 3135.9634878539946,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 103,
    "_next": "G#",
    "_note": "G",
    "_octave": 6,
    "_prev": "F#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "G#",
    "_freq": 3322.437580639561,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 104,
    "_next": "A",
    "_note": "Ab",
    "_octave": 6,
    "_prev": "G",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 3729.3100921447194,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 106,
    "_next": "B",
    "_note": "Bb",
    "_octave": 6,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 4186.009044809578,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 108,
    "_next": "C#",
    "_note": "C",
    "_octave": 7,
    "_prev": "B",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "C#",
    "_freq": 4434.922095629953,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 109,
    "_next": "D",
    "_note": "Db",
    "_octave": 7,
    "_prev": "C",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 4978.031739553295,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 111,
    "_next": "E",
    "_note": "Eb",
    "_octave": 7,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 5587.651702928062,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 113,
    "_next": "F#",
    "_note": "F",
    "_octave": 7,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 6271.926975707989,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 115,
    "_next": "G#",
    "_note": "G",
    "_octave": 7,
    "_prev": "F#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "G#",
    "_freq": 6644.875161279122,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 116,
    "_next": "A",
    "_note": "Ab",
    "_octave": 7,
    "_prev": "G",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 7458.620184289437,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 118,
    "_next": "B",
    "_note": "Bb",
    "_octave": 7,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 8372.018089619156,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 120,
    "_next": "C#",
    "_note": "C",
    "_octave": 8,
    "_prev": "B",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "C#",
    "_freq": 8869.844191259906,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 121,
    "_next": "D",
    "_note": "Db",
    "_octave": 8,
    "_prev": "C",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 9956.06347910659,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 123,
    "_next": "E",
    "_note": "Eb",
    "_octave": 8,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 11175.303405856126,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 125,
    "_next": "F#",
    "_note": "F",
    "_octave": 8,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 12543.853951415975,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 127,
    "_next": "G#",
    "_note": "G",
    "_octave": 8,
    "_prev": "F#",
  },
]
`;

exports[`An Octaves Test Suite should map - major with flats 1`] = `
Array [
  Note {
    "_enharmonic": null,
    "_freq": 21.826764464562746,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 17,
    "_next": "F#",
    "_note": "F",
    "_octave": -1,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 24.499714748859326,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 19,
    "_next": "G#",
    "_note": "G",
    "_octave": -1,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 27.5,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 21,
    "_next": "A#",
    "_note": "A",
    "_octave": -1,
    "_prev": "G#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 29.13523509488062,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 22,
    "_next": "B",
    "_note": "Bb",
    "_octave": -1,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 32.70319566257483,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 24,
    "_next": "C#",
    "_note": "C",
    "_octave": 0,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 36.70809598967594,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 26,
    "_next": "D#",
    "_note": "D",
    "_octave": 0,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 41.20344461410875,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 28,
    "_next": "F",
    "_note": "E",
    "_octave": 0,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 43.653528929125486,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 29,
    "_next": "F#",
    "_note": "F",
    "_octave": 0,
    "_prev": "E",
  },
]
`;

exports[`An Octaves Test Suite should map - natural 1`] = `
Array [
  Note {
    "_enharmonic": null,
    "_freq": 8.175798915643707,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 0,
    "_next": "C#",
    "_note": "C",
    "_octave": -2,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 9.177023997418988,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 2,
    "_next": "D#",
    "_note": "D",
    "_octave": -2,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 10.300861153527183,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 4,
    "_next": "F",
    "_note": "E",
    "_octave": -2,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 10.913382232281373,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 5,
    "_next": "F#",
    "_note": "F",
    "_octave": -2,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 12.249857374429663,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 7,
    "_next": "G#",
    "_note": "G",
    "_octave": -2,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 13.75,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 9,
    "_next": "A#",
    "_note": "A",
    "_octave": -2,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 15.433853164253883,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 11,
    "_next": "C",
    "_note": "B",
    "_octave": -2,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 16.351597831287414,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 12,
    "_next": "C#",
    "_note": "C",
    "_octave": -1,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 18.354047994837977,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 14,
    "_next": "D#",
    "_note": "D",
    "_octave": -1,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 20.601722307054366,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 16,
    "_next": "F",
    "_note": "E",
    "_octave": -1,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 21.826764464562746,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 17,
    "_next": "F#",
    "_note": "F",
    "_octave": -1,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 24.499714748859326,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 19,
    "_next": "G#",
    "_note": "G",
    "_octave": -1,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 27.5,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 21,
    "_next": "A#",
    "_note": "A",
    "_octave": -1,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 30.86770632850775,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 23,
    "_next": "C",
    "_note": "B",
    "_octave": -1,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 32.70319566257483,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 24,
    "_next": "C#",
    "_note": "C",
    "_octave": 0,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 36.70809598967594,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 26,
    "_next": "D#",
    "_note": "D",
    "_octave": 0,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 41.20344461410875,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 28,
    "_next": "F",
    "_note": "E",
    "_octave": 0,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 43.653528929125486,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 29,
    "_next": "F#",
    "_note": "F",
    "_octave": 0,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 48.999429497718666,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 31,
    "_next": "G#",
    "_note": "G",
    "_octave": 0,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 55,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 33,
    "_next": "A#",
    "_note": "A",
    "_octave": 0,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 61.7354126570155,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 35,
    "_next": "C",
    "_note": "B",
    "_octave": 0,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 65.40639132514966,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 36,
    "_next": "C#",
    "_note": "C",
    "_octave": 1,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 73.41619197935188,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 38,
    "_next": "D#",
    "_note": "D",
    "_octave": 1,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 82.4068892282175,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 40,
    "_next": "F",
    "_note": "E",
    "_octave": 1,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 87.30705785825097,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 41,
    "_next": "F#",
    "_note": "F",
    "_octave": 1,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 97.99885899543733,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 43,
    "_next": "G#",
    "_note": "G",
    "_octave": 1,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 110,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 45,
    "_next": "A#",
    "_note": "A",
    "_octave": 1,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 123.47082531403103,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 47,
    "_next": "C",
    "_note": "B",
    "_octave": 1,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 130.8127826502993,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 48,
    "_next": "C#",
    "_note": "C",
    "_octave": 2,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 146.8323839587038,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 50,
    "_next": "D#",
    "_note": "D",
    "_octave": 2,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 164.81377845643496,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 52,
    "_next": "F",
    "_note": "E",
    "_octave": 2,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 174.61411571650194,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 53,
    "_next": "F#",
    "_note": "F",
    "_octave": 2,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 195.99771799087463,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 55,
    "_next": "G#",
    "_note": "G",
    "_octave": 2,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 220,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 57,
    "_next": "A#",
    "_note": "A",
    "_octave": 2,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 246.94165062806206,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 59,
    "_next": "C",
    "_note": "B",
    "_octave": 2,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 261.6255653005986,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 60,
    "_next": "C#",
    "_note": "C",
    "_octave": 3,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 293.6647679174076,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 62,
    "_next": "D#",
    "_note": "D",
    "_octave": 3,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 329.6275569128699,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 64,
    "_next": "F",
    "_note": "E",
    "_octave": 3,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 349.2282314330039,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 65,
    "_next": "F#",
    "_note": "F",
    "_octave": 3,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 391.99543598174927,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 67,
    "_next": "G#",
    "_note": "G",
    "_octave": 3,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 440,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 69,
    "_next": "A#",
    "_note": "A",
    "_octave": 3,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 493.8833012561241,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 71,
    "_next": "C",
    "_note": "B",
    "_octave": 3,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 523.2511306011972,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 72,
    "_next": "C#",
    "_note": "C",
    "_octave": 4,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 587.3295358348151,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 74,
    "_next": "D#",
    "_note": "D",
    "_octave": 4,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 659.2551138257398,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 76,
    "_next": "F",
    "_note": "E",
    "_octave": 4,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 698.4564628660078,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 77,
    "_next": "F#",
    "_note": "F",
    "_octave": 4,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 783.9908719634985,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 79,
    "_next": "G#",
    "_note": "G",
    "_octave": 4,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 880,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 81,
    "_next": "A#",
    "_note": "A",
    "_octave": 4,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 987.7666025122483,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 83,
    "_next": "C",
    "_note": "B",
    "_octave": 4,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1046.5022612023945,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 84,
    "_next": "C#",
    "_note": "C",
    "_octave": 5,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1174.6590716696303,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 86,
    "_next": "D#",
    "_note": "D",
    "_octave": 5,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1318.5102276514797,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 88,
    "_next": "F",
    "_note": "E",
    "_octave": 5,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1396.9129257320155,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 89,
    "_next": "F#",
    "_note": "F",
    "_octave": 5,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1567.981743926997,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 91,
    "_next": "G#",
    "_note": "G",
    "_octave": 5,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1760,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 93,
    "_next": "A#",
    "_note": "A",
    "_octave": 5,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1975.533205024496,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 95,
    "_next": "C",
    "_note": "B",
    "_octave": 5,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2093.004522404789,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 96,
    "_next": "C#",
    "_note": "C",
    "_octave": 6,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2349.31814333926,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 98,
    "_next": "D#",
    "_note": "D",
    "_octave": 6,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2637.02045530296,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 100,
    "_next": "F",
    "_note": "E",
    "_octave": 6,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2793.825851464031,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 101,
    "_next": "F#",
    "_note": "F",
    "_octave": 6,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 3135.9634878539946,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 103,
    "_next": "G#",
    "_note": "G",
    "_octave": 6,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 3520,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 105,
    "_next": "A#",
    "_note": "A",
    "_octave": 6,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 3951.066410048992,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 107,
    "_next": "C",
    "_note": "B",
    "_octave": 6,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 4186.009044809578,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 108,
    "_next": "C#",
    "_note": "C",
    "_octave": 7,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 4698.63628667852,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 110,
    "_next": "D#",
    "_note": "D",
    "_octave": 7,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 5274.04091060592,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 112,
    "_next": "F",
    "_note": "E",
    "_octave": 7,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 5587.651702928062,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 113,
    "_next": "F#",
    "_note": "F",
    "_octave": 7,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 6271.926975707989,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 115,
    "_next": "G#",
    "_note": "G",
    "_octave": 7,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 7040,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 117,
    "_next": "A#",
    "_note": "A",
    "_octave": 7,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 7902.132820097988,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 119,
    "_next": "C",
    "_note": "B",
    "_octave": 7,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 8372.018089619156,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 120,
    "_next": "C#",
    "_note": "C",
    "_octave": 8,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 9397.272573357044,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 122,
    "_next": "D#",
    "_note": "D",
    "_octave": 8,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 10548.081821211836,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 124,
    "_next": "F",
    "_note": "E",
    "_octave": 8,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 11175.303405856126,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 125,
    "_next": "F#",
    "_note": "F",
    "_octave": 8,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 12543.853951415975,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 127,
    "_next": "G#",
    "_note": "G",
    "_octave": 8,
    "_prev": "F#",
  },
]
`;

exports[`An Octaves Test Suite should map - pentatonic 1`] = `
Array [
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 9.722718241315029,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 3,
    "_next": "E",
    "_note": "Eb",
    "_octave": -2,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 10.913382232281373,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 5,
    "_next": "F#",
    "_note": "F",
    "_octave": -2,
    "_prev": "E",
  },
  Note {
    "_enharmonic": null,
    "_freq": 12.249857374429663,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 7,
    "_next": "G#",
    "_note": "G",
    "_octave": -2,
    "_prev": "F#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 14.567617547440307,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 10,
    "_next": "B",
    "_note": "Bb",
    "_octave": -2,
    "_prev": "A",
  },
  Note {
    "_enharmonic": null,
    "_freq": 16.351597831287414,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 12,
    "_next": "C#",
    "_note": "C",
    "_octave": -1,
    "_prev": "B",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 19.445436482630058,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 15,
    "_next": "E",
    "_note": "Eb",
    "_octave": -1,
    "_prev": "D",
  },
]
`;

exports[`An Octaves Test Suite should map - sharp 1`] = `
Array [
  Note {
    "_enharmonic": null,
    "_freq": 329.6275569128699,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 64,
    "_next": "F",
    "_note": "E",
    "_octave": 3,
    "_prev": "D#",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Gb",
    "_freq": 369.9944227116344,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 66,
    "_next": "G",
    "_note": "F#",
    "_octave": 3,
    "_prev": "F",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Ab",
    "_freq": 415.3046975799451,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 68,
    "_next": "A",
    "_note": "G#",
    "_octave": 3,
    "_prev": "G",
  },
  Note {
    "_enharmonic": null,
    "_freq": 440,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 69,
    "_next": "A#",
    "_note": "A",
    "_octave": 3,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 493.8833012561241,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 71,
    "_next": "C",
    "_note": "B",
    "_octave": 3,
    "_prev": "A#",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Db",
    "_freq": 554.3652619537442,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 73,
    "_next": "D",
    "_note": "C#",
    "_octave": 4,
    "_prev": "C",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Eb",
    "_freq": 622.2539674441618,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 75,
    "_next": "E",
    "_note": "D#",
    "_octave": 4,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 659.2551138257398,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 76,
    "_next": "F",
    "_note": "E",
    "_octave": 4,
    "_prev": "D#",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Gb",
    "_freq": 739.9888454232688,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 78,
    "_next": "G",
    "_note": "F#",
    "_octave": 4,
    "_prev": "F",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Ab",
    "_freq": 830.6093951598903,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 80,
    "_next": "A",
    "_note": "G#",
    "_octave": 4,
    "_prev": "G",
  },
  Note {
    "_enharmonic": null,
    "_freq": 880,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 81,
    "_next": "A#",
    "_note": "A",
    "_octave": 4,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 987.7666025122483,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 83,
    "_next": "C",
    "_note": "B",
    "_octave": 4,
    "_prev": "A#",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Db",
    "_freq": 1108.7305239074883,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 85,
    "_next": "D",
    "_note": "C#",
    "_octave": 5,
    "_prev": "C",
  },
  Note {
    "_accident": "#",
    "_enharmonic": "Eb",
    "_freq": 1244.5079348883237,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 87,
    "_next": "E",
    "_note": "D#",
    "_octave": 5,
    "_prev": "D",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1318.5102276514797,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 88,
    "_next": "F",
    "_note": "E",
    "_octave": 5,
    "_prev": "D#",
  },
]
`;

exports[`An Octaves Test Suite should map 9m chord 1`] = `
Array [
  Note {
    "_accident": "b",
    "_enharmonic": "G#",
    "_freq": 830.6093951598903,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 80,
    "_next": "A",
    "_note": "Ab",
    "_octave": 4,
    "_prev": "G",
  },
  Note {
    "_enharmonic": null,
    "_freq": 987.7666025122483,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 83,
    "_next": "C",
    "_note": "B",
    "_octave": 4,
    "_prev": "A#",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "D#",
    "_freq": 1244.5079348883237,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 87,
    "_next": "E",
    "_note": "Eb",
    "_octave": 5,
    "_prev": "D",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "F#",
    "_freq": 1479.9776908465376,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 90,
    "_next": "G",
    "_note": "Gb",
    "_octave": 5,
    "_prev": "F",
  },
  Note {
    "_accident": "b",
    "_enharmonic": "A#",
    "_freq": 1864.6550460723597,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 94,
    "_next": "B",
    "_note": "Bb",
    "_octave": 5,
    "_prev": "A",
  },
]
`;

exports[`An Octaves Test Suite should map M13 chord 1`] = `
Array [
  Note {
    "_enharmonic": null,
    "_freq": 523.2511306011972,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 72,
    "_next": "C#",
    "_note": "C",
    "_octave": 4,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 659.2551138257398,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 76,
    "_next": "F",
    "_note": "E",
    "_octave": 4,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 783.9908719634985,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 79,
    "_next": "G#",
    "_note": "G",
    "_octave": 4,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 987.7666025122483,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 83,
    "_next": "C",
    "_note": "B",
    "_octave": 4,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1174.6590716696303,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 86,
    "_next": "D#",
    "_note": "D",
    "_octave": 5,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 1760,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 93,
    "_next": "A#",
    "_note": "A",
    "_octave": 5,
    "_prev": "G#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2093.004522404789,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 96,
    "_next": "C#",
    "_note": "C",
    "_octave": 6,
    "_prev": "B",
  },
  Note {
    "_enharmonic": null,
    "_freq": 2637.02045530296,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 100,
    "_next": "F",
    "_note": "E",
    "_octave": 6,
    "_prev": "D#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 3135.9634878539946,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 103,
    "_next": "G#",
    "_note": "G",
    "_octave": 6,
    "_prev": "F#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 3951.066410048992,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 107,
    "_next": "C",
    "_note": "B",
    "_octave": 6,
    "_prev": "A#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 4698.63628667852,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 110,
    "_next": "D#",
    "_note": "D",
    "_octave": 7,
    "_prev": "C#",
  },
  Note {
    "_enharmonic": null,
    "_freq": 7040,
    "_isFlat": false,
    "_isSharp": false,
    "_midi": 117,
    "_next": "A#",
    "_note": "A",
    "_octave": 7,
    "_prev": "G#",
  },
]
`;
